# siege-api

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml  test.yml
apps/authentication/: __init__.py  tests.py  urls.py  views.py
apps/authentication/logic/: backend.py  serializers.py
apps/channels/: __init__.py  models.py  urls.py  views.py
apps/channels/logic/: serializers.py
apps/channels/migrations/: 0001_initial.py  0002_alter_channel_description.py
apps/guilds/: __init__.py  models.py  tests.py  urls.py  views.py
apps/guilds/logic/: serializers.py  utils.py
apps/guilds/migrations/: 0001_initial.py  0002_alter_guild_owner_id_guildmember_guild_members.py  0003_remove_guildmember_guild_remove_guildmember_user.py  0004_alter_guild_members_delete_guildmember.py  0005_alter_guild_description.py
apps/members/: __init__.py  models.py  urls.py  views.py
apps/members/logic/: serializers.py
apps/members/migrations/: 0001_initial.py  0002_alter_member_nick.py
apps/messages/: __init__.py  models.py  tests.py  urls.py  views.py
apps/messages/logic/: serialiazers.py  serializers.py
apps/messages/migrations/: 0001_initial.py  0002_alter_message_options_alter_message_table.py
apps/rooms/: __init__.py  models.py  tests.py  urls.py  views.py
apps/rooms/logic/: serializers.py  utils.py
apps/rooms/migrations/: 0001_initial.py
apps/users/: __init__.py  admin.py  apps.py  backend.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/logic/: backend.py  serializers.py  utils.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_is_staff_alter_user_tag_and_more.py  0003_alter_user_tag.py  0004_alter_user_table.py
config/: .env.example
core/: exceptions.py  fields.py  models.py  renderers.py  tests.py  tokens.py  websockets.py
docker/django/: Dockerfile  entrypoint.sh
locale/en_US/LC_MESSAGES/: django.po
scripts/: create-env.sh
server/: asgi.py  settings.py  urls.py  wsgi.py
server/apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
server/core/: models.py
server/settings/: __init__.py  base.py  ci.py  development.py
typings/: decouple.pyi
typings/pusher/: __init__.pyi  pusher.pyi
