[tool.poetry]
name = "api"
version = "0.1.0"
description = "A Proof of Concept for API development in Python."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
django-stubs = "^1.13.1"
mypy = "^0.991"
black = "^22.12.0"

[tool.black]
color = true
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
