[tool.poetry]
name = "api"
version = "0.2.0"
description = "A Proof of Concept for API development in Python."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
snowflake-id = "^0.0.2"
python-decouple = "^3.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.12.0"
isort = "^5.11.4"
commitizen = "^2.38.0"
flake8 = "^6.0.0"
coverage = "^7.0.3"

[tool.black]
color = true
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

# TODO: add a custom changelog template
[tool.commitizen]
version = "0.2.0"
version_files = ["pyproject.toml"]
update_changelog_on_bump = true
changelog_incremental = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
